--- a/.github/workflows/build-main.yml
+++ b/.github/workflows/build-main.yml
@@ -15,8 +15,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: [3.7, 3.8]
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        python-version: [3.7, 3.8, 3.9]
+        os: [ubuntu-latest, windows-latest, macos-latest, macos-11.0]
 
     steps:
     - uses: actions/checkout@v1
