--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -9,6 +9,5 @@ recursive-exclude * *.py[co]
 recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
 graft aicssegmentation/data
 
-include demo_data/thumbnails/*.png
-
-
+recursive-include aicssegmentation/assets/thumbnails *.png
+recursive-include aicssegmentation/structure_wrapper_config *.json
