--- a/setup.cfg
+++ b/setup.cfg
@@ -21,11 +21,13 @@ test = pytest
 collect_ignore = ['setup.py']
 
 [flake8]
-exclude = 
+exclude =
 	docs/
-ignore = 
+	*/tests/*
+ignore =
 	E203
-	E402
 	W291
 	W503
-max-line-length = 88
+	W293
+	E261
+max-line-length = 120
