--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,4 +10,5 @@ recursive-include docs *.rst conf.py Makefile make.bat *.jpg *.png *.gif
 graft aicssegmentation/data
 
 recursive-include aicssegmentation/assets/thumbnails *.png
+recursive-include aicssegmentation/assets/diagrams *.png
 recursive-include aicssegmentation/structure_wrapper_config *.json
